# lazy-orm-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  Test1.txt  conanfile.py  run_mariadb_tests.sh
docs/: api.md  installation.md  quick-start.md  usecases.md
include/: AbstractLazy.h  DbList.h  DbVariant.h  FilterVariant.h  FilteringAbstractLazy.h  FilteringLazy.h  HavingFilter.h  JoinAbstract.h  JoinMariadb.h  LazyOrm.h  LazyTransaction.h  MariadbFilteringLazy.h  MariadbLazy.h  PostgreFilteringLazy.h  PostgreLazy.h  Result.h  ResultRow.h  SqliteFilteringLazy.h  SqliteLazy.h  Transaction.h  TransactionMariadb.h  TransactionPostgre.h  TransactionSqlite.h  WhereFilter.h  WhereFilterPostgre.h
src/: AbstractLazy.cpp  DbList.cpp  DbVariant.cpp  FilterVariant.cpp  FilteringAbstractLazy.cpp  FilteringLazy.cpp  JoinAbstract.cpp  JoinMariadb.cpp  LazyOrm.cpp  LazyTransaction.cpp  MariadbFilteringLazy.cpp  MariadbLazy.cpp  PostgreFilteringLazy.cpp  PostgreLazy.cpp  Result.cpp  ResultRow.cpp  SqliteFilteringLazy.cpp  SqliteLazy.cpp  Transaction.cpp  TransactionMariadb.cpp  TransactionPostgre.cpp  TransactionSqlite.cpp  WhereFilter.cpp  WhereFilterPostgre.cpp
tests/: CMakeLists.txt  Test1.txt  batch_insert.cpp  bulk_insert.cpp  bulk_insert_mariadb.cpp  bulk_update.cpp  class_lazyorm_mariadb.cpp  delete.cpp  delete_postgres.cpp  delete_sqlite.cpp  filters.cpp  insert.cpp  main.cpp  raw_query_postgres.cpp  result.cpp  result_postgres.cpp  select.cpp  select_mariadb.cpp  select_postgres.cpp  sqlite.cpp  transaction.cpp  update.cpp  variant.cpp  variant_postgres.cpp  where.cpp  where.cpp1  where2.cpp  where2.cpp1
tests/mariadb/: bulk_update.cpp  bulk_update_mariadb.cpp  class_lazyorm.cpp  delete_mariadb.cpp  filters.cpp  insert_duplicate_mariadb.cpp  insert_mariadb.cpp  join.cpp  lazytransaction.cpp  raw_query.cpp  select.cpp  transaction.cpp  where_mariadb.cpp
tests/postgres/: bulk_insert.cpp  bulk_update.cpp  class_lazyorm.cpp  delete_postgres.cpp  filters.cpp  filters_postgres.cpp  insert.cpp  insert_duplicate.cpp  insert_duplicate_postgres.cpp  lazytransaction.cpp  raw_query.cpp  raw_query_postgres.cpp  select.cpp  transaction.cpp  transaction_postgres.cpp  update_postgres.cpp  where.cpp
tests/sqlite/: bulk_insert.cpp  bulk_insert_sqlite.cpp  bulk_update.cpp  bulk_update_sqlite.cpp  class_lazyorm.cpp  delete.cpp  filters.cpp  filters_sqlite.cpp  insert.cpp  insert_duplicate.cpp  insert_duplicate_sqlite.cpp  lazytransaction.cpp  raw_query.cpp  raw_query_sqlite.cpp  result.cpp  select.cpp  select_sqlite.cpp  transaction.cpp  update.cpp  where.cpp  where_sqlite.cpp
